# Voxel_Engine

./: CMakeLists.txt  CMakePresets.json  Voxel_Engine.cpp  Voxel_Engine.h
tsaps/: CMakeLists.txt
tsaps/src/core/: graphics_io_base.h  user_io_base.h  vertex_array.cpp  vertex_array.h
tsaps/src/windows/: graphics_io.cpp  graphics_io.h  user_io.cpp  user_io.h  vertex_shader.GLSL
tsaps/src/windows/Glad/: CMakeLists.txt
